--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">EvaluationTask</string>
+    <string name="rank">Rank: </string>
+    <string name="country_label">Country: </string>
+    <string name="population_label">Population: </string>
 </resources>
